--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br /><br />
     <button onclick="stop()">Stop</button>
     <br /><br />
-    <button onclick="selectShape('GLIDER')">GLIDER</button>
+    <button onclick="selectShape('GLIDERGUN')">GLIDER GUN</button>
     <button onclick="selectShape('LOOP_1')">LOOP_1</button>
 
     <script src="script.js"></script>
