--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <br /><br />
     <button onclick="stop()">Stop</button>
     <br /><br />
+    <button onclick="initializeMatrix()">Clear</button>
+    <br /><br />
     <button onclick="selectShape('GLIDERGUN')">GLIDER GUN</button>
     <button onclick="selectShape('LOOP_1')">LOOP_1</button>
 
