--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <title>Game of life</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style></style>
   </head>
   <body>
