--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <head>
     <title>Game of life</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style></style>
+    <style>
+      body {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <canvas
